--- a/front/front-end/src/styles/UserForm.module.css
+++ b/front/front-end/src/styles/UserForm.module.css
@@ -83,3 +83,12 @@
     border:3px solid #3b3b3b;
     color: #fff;
 }
+
+.form span{
+    text-align: left;
+    width: 100%;
+    font-size: 1.2em;
+    color: red;
+    font-weight: bold;
+    margin: 0.2em 0.5em 0 0.9em;
+}
