--- a/front/front-end/src/styles/FileInput.module.css
+++ b/front/front-end/src/styles/FileInput.module.css
@@ -3,12 +3,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .input-form{
-    display: flex;
-    justify-content: center;
+    display: grid;
+    place-items: center;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+    'upload-button file-preview'
+    'submit-button submit-button';
+    grid-gap:1em;
+    width: 40vw;
 }
 
 .input-file {
@@ -20,6 +26,7 @@
   z-index: -1;
 }
 .input-file + label {
+  grid-area: upload-button;
     margin: 1em;
     font-size: 1.5em;
     width: 7vw;
@@ -40,6 +47,7 @@
 
 .file-preview
 {
+  grid-area: file-preview;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -49,4 +57,17 @@
 {
   padding: 0.7em 0.15em 0.7em 0.15em;
   font-size: 1.5em;
+}
+.submit-button
+{
+  grid-area: submit-button;
+  margin: 1em;
+  font-size: 1.5em;
+  width: 13vw;
+  border-radius: 0.3em;
+  border: 3px solid #000;
+  padding: 0.4em;
+  background-color: #000;
+  color: #fff;
+  cursor: pointer;
 }
