--- a/front/front-end/src/styles/FileInput.module.css
+++ b/front/front-end/src/styles/FileInput.module.css
@@ -14,7 +14,7 @@
     'upload-button file-preview'
     'submit-button submit-button';
     grid-gap:1em;
-    width: 40vw;
+    width: 20vw;
 }
 
 .input-file {
@@ -29,7 +29,7 @@
   grid-area: upload-button;
     margin: 1em;
     font-size: 1.5em;
-    width: 7vw;
+    width: 85%;
     border-radius: 0.3em;
     border: 3px solid #000;
     padding: 0.4em;
