--- a/front/front-end/src/styles/SubmitionPage.module.css
+++ b/front/front-end/src/styles/SubmitionPage.module.css
@@ -1,3 +1,14 @@
+.preview-container
+{
+    margin: 1em auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items:center;
+    justify-content: space-evenly;
+    width: 60vw;
+}
+
 .sign-button
 {
     font-size: 2.3em;
