--- a/front/front-end/src/styles/PreviewBox.module.css
+++ b/front/front-end/src/styles/PreviewBox.module.css
@@ -27,6 +27,20 @@
     padding: 0 1.5em;
     margin:0.75em 0;
 }
+
+.preview-box button
+{
+        align-self: center;
+    font-size: 2.3em;
+    color:#fff;
+    padding: 0.4em;
+    width: 10vw;
+    border-radius: 0.6em;
+    border: 2px solid #000; 
+    background: rgb(121,9,94);
+    background: linear-gradient(90deg, rgba(121,9,94,1) 0%, rgba(72,0,255,1) 100%);
+}
+
 .preview-box > *:last-child
 {
     margin-bottom: 1.75em;
