--- a/front/front-end/src/index.css
+++ b/front/front-end/src/index.css
@@ -15,3 +15,11 @@ h1{
   font-size: 2.5em;
   margin: 0.5em 0.5em 0 0.5em;
 }
+
+.main-content-container{
+  margin-top: 5em;
+}
+
+.main-content-container h1{
+  text-align: center;
+}
