--- a/front/front-end/src/styles/FileInput.module.css
+++ b/front/front-end/src/styles/FileInput.module.css
@@ -1,32 +1,12 @@
-.file-input-container
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.input-form{
-    display: grid;
-    place-items: center;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas:
-    'upload-button file-preview'
-    'submit-button submit-button';
-    grid-gap:1em;
-    width: 20vw;
-}
-
 .input-file {
-  width: 0.1px;
-  height: 0.1px;
-  opacity: 0;
-  overflow: hidden;
-  position: absolute;
-  z-index: -1;
-}
-.input-file + label {
-  grid-area: upload-button;
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+  }
+  .input-file + label {
     margin: 1em;
     font-size: 1.5em;
     width: 85%;
@@ -36,38 +16,19 @@
     background-color: #000;
     color: #fff;
     cursor: pointer;
-}
+    text-align: center;
+  }
+  
+  .input-file:focus + label,
+  .input-file + label:hover {
+    background-color: #3b3b3b;
+    border: 3px solid #3b3b3b;
+    color: #fff;
+  }
 
-.input-file:focus + label,
-.input-file + label:hover {
-  background-color: #3b3b3b;
-  border: 3px solid #3b3b3b;
-  color: #fff;
-}
-
-.file-preview
-{
-  grid-area: file-preview;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.file-preview > *
-{
-  padding: 0.7em 0.15em 0.7em 0.15em;
-  font-size: 1.5em;
-}
-.submit-button
-{
-  grid-area: submit-button;
-  margin: 1em;
-  font-size: 1.5em;
-  width: 13vw;
-  border-radius: 0.3em;
-  border: 3px solid #000;
-  padding: 0.4em;
-  background-color: #000;
-  color: #fff;
-  cursor: pointer;
-}
+  .file-input-header
+  {
+    width: 100%;
+    font-size: 1.7em;
+    text-align: right;
+  }
