--- a/front/front-end/src/styles/PreviewBox.module.css
+++ b/front/front-end/src/styles/PreviewBox.module.css
@@ -11,6 +11,7 @@
     border: 1px solid #000;
     border-radius: 1em;
 }
+
 .preview-box h1
 {
     width: 100%;
@@ -44,4 +45,28 @@
 .preview-box > *:last-child
 {
     margin-bottom: 1.75em;
+}
+@media (max-width: 1500px)
+{
+    .preview-box h1
+    {
+        font-size: 1.5em;
+    }
+    .preview-box a
+    {
+        font-size: 0.8em;
+    }
+    
+}
+@media (max-width: 1100px)
+{
+    .preview-box h1
+    {
+        font-size: 1.2em;
+    }
+    .preview-box a
+    {
+        font-size:0.7em;
+    }
+    
 }
