--- a/front/front-end/src/styles/PreviewBox.module.css
+++ b/front/front-end/src/styles/PreviewBox.module.css
@@ -12,11 +12,18 @@
     border-radius: 1em;
 }
 
+.hoverable:hover
+{
+    cursor: pointer;
+    background-color: #e4e4e4;
+}
+
 .preview-box h1
 {
     width: 100%;
     font-size: 2em;
     text-align: center;
+    
     margin:0.25em 0;
     padding:0.35em 0 ;
     border-bottom: 1px solid #000;
